<resources>
    <string name="app_name">Lab2Activities</string>
    <!-- Strings related to activities tittle-->
    <!-- Strings related to login -->
    <string name="uuser">Usuario</string>
    <string name="ppassword">Contraseña</string>
    <string name="sign_in">Ingresar</string>
    <string name="invalid_password">La contraseña es muy corta</string>
    <string name="invalid_user">El usuario es muy corto</string>
    <string name="incorrect_password">Usuario o contraseña incorrectos</string>
    <string name="field_required">Este campo es requerido</string>
    <string name="correo">E-mail</string>
    <string name="Registrarse">Registrarse</string>
    <string name="telefono">Teléfono</string>
    <string name="invalid_mail">El correo no es válido</string>
    <string name="pass_no_equals">Las contraseñas no coinciden</string>
    <string name="user_exists">El usuario ya existe</string>
    <string name="register_cancelled">El registro fue cancelado</string>
    <string name="ok_register">Registro exitoso</string>
    <string name="user_no_exists">El usuario no existe</string>
    <string name="confirmarConstraseña">Confirmar Constraseña</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="about">Acerca de</string>
    <string name="places">Sitios</string>
    <string name="login">Iniciar sesión o registrarse</string>
    <string name="profile">Perfil</string>
    <string name="Score">Puntuacion</string>
    <string name="Descripcion">Descripción</string>
    <string name="Place">Lugar</string>
    <string name="NombreUbicacion">Ubicación</string>
    <string name="Temperatura">Temperatura y sitios</string>
    <string name="action_settings">Cerrar sesión</string>
    <string name="no_places">No hay sitios para mostrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
