<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarLugarFragment">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/NombreUbicacion"
                    android:inputType="text"
                    android:hint="@string/NombreUbicacion"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="10dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/Descripción"
                    android:hint="@string/Descripcion"
                    android:inputType="textCapSentences|textMultiLine"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="10dp" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/Place"
                    android:inputType="text"
                    android:hint="@string/Place"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="10dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/score"
                    android:inputType="text"
                    android:hint="@string/Score"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="10dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/Temperatura"
                    android:inputType="text"
                    android:hint="@string/Temperatura"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="10dp" />
            </android.support.design.widget.TextInputLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/galleryButton"
                    android:onClick="GClic"
                    android:src="@android:drawable/ic_menu_gallery"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="40dp"
                    android:background="@drawable/round_button" />

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/galleryButton"
                    android:id="@+id/cameraButton"
                    android:onClick="CClic"
                    android:src="@android:drawable/ic_menu_camera"
                    android:background="@drawable/round_button"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"/>

                <ImageView
                    android:layout_toRightOf="@id/cameraButton"
                    android:layout_width="fill_parent"
                    android:layout_height="150dp"
                    android:id="@+id/LugarImagen"
                    android:layout_marginRight="20dp" />
            </RelativeLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Añadir"
                android:id="@+id/buttonLugar"
                android:onClick="OtroLugar"
                android:textColor="#fcfafa"
                android:textStyle="bold"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_marginTop="20dp" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>
